# v2m

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.superdesign/: design-system.md
docs/superpowers/plans/: 2026-06-22-v2m-backend.md  v2m-chunked-transcription.md  v2m-frontend.md
docs/superpowers/specs/: 2026-06-22-v2m-voice-to-minutes-design.md  v2m-chunked-transcription-design.md  v2m-frontend-design.md  v2m-voice-to-minutes-design.md
server/: .env.example  .gitignore  README.md  pyproject.toml  run.py
server/app/: main.py
server/app/api/: recordings.py
server/app/core/: config.py  health.py  paths.py
server/app/export/: markdown.py
server/app/jobs/: queue.py
server/app/prompt/: builder.py
server/app/store/: db.py  models.py  repo.py
server/app/transcribe/: base.py  chunking.py  fake.py  whisperx_runner.py
server/tests/: conftest.py  test_app_wiring.py  test_chunking.py  test_config.py  test_db.py  test_export.py  test_health.py  test_ingest.py  test_jobs.py  test_paths.py  test_prompt.py  test_recordings_api.py  test_repo.py  test_transcriber_fake.py  test_whisperx_runner.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
web/src/features/meeting/: MeetingForm.test.tsx  (+1 more)
web/src/hooks/: useBeforeUnloadGuard.test.ts  useBeforeUnloadGuard.ts  useRecorder.test.ts  useRecorder.ts  useRecordings.test.ts  useRecordings.ts
web/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  recordingStore.test.ts  recordingStore.ts  types.ts
(+9 files in other folders)
