[project]
name = "v2m-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "numpy>=1.23",
]

[project.optional-dependencies]
ml = [
    "whisperx>=3.1",
    "faster-whisper>=1.0",
    "torch>=2.2",
    "hf_xet>=1.0",  # faster, more resilient HuggingFace model downloads
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
